--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
     <meta name="title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
       name="description"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Solana blockchain, providing the highest capital efficiency and risk management." />
+      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
     <meta
       name="keywords"
-      conent="crypto, crypto exchange, solana crypto, concentrated liquidity, defi crypto, solana exchange" />
+      conent="crypto, crypto exchange, eclipse crypto, concentrated liquidity, defi crypto, eclipse exchange" />
 
     <!-- Open Graph  -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://invariant.app/" />
+    <meta property="og:url" content="https://eclipse.invariant.app/" />
     <meta property="og:title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
       property="og:description"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Solana blockchain, providing the highest capital efficiency and risk management." />
-    <meta property="og:image" content="https://invariant.app/favicon-192x192.png" />
+      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
+    <meta property="og:image" content="https://eclipse.invariant.app/favicon-192x192.png" />
 
     <!-- Twitter Card  -->
     <meta property="twitter:card" content="summary" />
@@ -37,8 +37,8 @@
     <meta property="twitter:title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
       property="twitter:description"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Solana blockchain, providing the highest capital efficiency and risk management." />
-    <meta property="twitter:image" content="https://invariant.app/favicon-192x192.png" />
+      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
+    <meta property="twitter:image" content="https://eclipse.invariant.app/favicon-192x192.png" />
 
     <!-- DublinCore -->
     <link rel="schema.dcterms" href="https://purl.org/dc/terms/" />
@@ -46,14 +46,15 @@
     <meta
       name="DC.description"
       lang="en"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Solana blockchain, providing the highest capital efficiency and risk management." />
+      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
     <meta name="DC.publisher" content="Invariant" />
-    <meta name="DC.identifier" content="https://invariant.app/" />
+    <meta name="DC.identifier" content="https://eclipse.invariant.app/" />
     <meta name="DC.format" content="text/html" />
     <meta name="DC.type" content="Text" />
 
     <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script
+    <!-- commented for now to not mix anaylytics for Solana and Eclipse -->
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-TEFDYYTWP3"
       type="module"></script>
@@ -65,9 +66,9 @@
       }
       gtag('js', new Date())
       gtag('config', 'G-TEFDYYTWP3')
-    </script>
+    </script> -->
 
-    <link rel="canonical" href="https://invariant.app/" />
+    <link rel="canonical" href="https://eclipse.invariant.app/" />
     <link rel="manifest" href="/manifest.json" />
     <style>
       html {
