--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
       name="description"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
+      content="Invariant is the AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
     <meta
       name="keywords"
       conent="crypto, crypto exchange, eclipse crypto, concentrated liquidity, defi crypto, eclipse exchange" />
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
       property="og:description"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
+      content="Invariant is the AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
     <meta property="og:image" content="https://eclipse.invariant.app/favicon-192x192.png" />
 
     <!-- Twitter Card  -->
@@ -37,7 +37,7 @@
     <meta property="twitter:title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
       property="twitter:description"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
+      content="Invariant is the AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
     <meta property="twitter:image" content="https://eclipse.invariant.app/favicon-192x192.png" />
 
     <!-- DublinCore -->
@@ -46,7 +46,7 @@
     <meta
       name="DC.description"
       lang="en"
-      content="Invariant is the first AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
+      content="Invariant is the AMM DEX with concentrated liquidity on Eclipse, providing the highest capital efficiency and risk management." />
     <meta name="DC.publisher" content="Invariant" />
     <meta name="DC.identifier" content="https://eclipse.invariant.app/" />
     <meta name="DC.format" content="text/html" />
