--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         dataLayer.push(arguments)
       }
       gtag('js', new Date())
-      gtag('config', 'G-TEFDYYTWP3')
+      gtag('config', 'G-TEFDYYTWP3', { cookie_flags: 'SameSite=None;Secure' })
     </script> -->
 
     <link rel="canonical" href="https://eclipse.invariant.app/" />
