--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -104,6 +104,9 @@
 
     <!-- Global Site Tag (gtag.js) - Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-TEFDYYTWP3"></script>
+    <script>
+      var exports = {}
+    </script>
     <script>
       window.dataLayer = window.dataLayer || []
       function gtag() {
