--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <link rel="stylesheet" href="/fonts.css" />
+    <link
+      rel="preload"
+      href="/fonts/Mukta-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous" />
+    <link
+      rel="preload"
+      href="/fonts/Mukta-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous" />
 
     <meta name="theme-color" content="#000000" />
     <title>Invariant | DEX</title>
