--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     <meta
       property="og:title"
       content="Invariant - Unlock High Capital Efficiency with Concentrated Liquidity on Eclipse" />
-    <meta
-      property="og:description"
-      content="Join Invariant, the top AMM DEX on Eclipse, and access cutting-edge DeFi solutions with concentrated liquidity for maximum capital efficiency and risk management." />
+    <meta property="og:description" content="Join Invariant, the top AMM DEX on Eclipse," />
     <meta property="og:image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- Twitter -->
