--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://eclipse.invariant.app/" />
-    <meta
-      property="og:title"
-      content="Invariant - Unlock High Capital Efficiency with Concentrated Liquidity on Eclipse" />
-    <meta property="og:description" content="Join Invariant, the top AMM DEX on Eclipse," />
+    <meta property="og:title" content="Invariant" />
+    <meta property="og:description" content="Join " />
     <meta property="og:image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- Twitter -->
