--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://eclipse.invariant.app/" />
-    <meta property="og:title" content="Invariant" />
-    <meta property="og:description" content="Join " />
-    <meta property="og:image" content="https://eclipse.invariant.app/logo.png" />
+    <meta
+      property="og:title"
+      content="Invariant - Unlock High Capital Efficiency with Concentrated Liquidity on Eclipse" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta
+      property="og:description"
+      content="Join Invariant, the top AMM DEX on Eclipse, and access cutting-edge DeFi solutions with concentrated liquidity for maximum capital efficiency and risk management." />
+    <meta data-rh="true" property="og:image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary" />
