--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://eclipse.invariant.app/" />
+    <meta data-rh="true" property="og:type" content="website" />
+    <meta data-rh="true" property="og:url" content="https://eclipse.invariant.app/" />
     <meta
+      data-rh="true"
       property="og:title"
       content="Invariant - Unlock High Capital Efficiency with Concentrated Liquidity on Eclipse" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta data-rh="true" property="og:image:width" content="1200" />
+    <meta data-rh="true" property="og:image:height" content="630" />
     <meta
       property="og:description"
       content="Join Invariant, the top AMM DEX on Eclipse, and access cutting-edge DeFi solutions with concentrated liquidity for maximum capital efficiency and risk management." />
