--- a/index.html
+++ b/index.html
@@ -25,21 +25,18 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
-    <meta data-rh="true" property="og:type" content="website" />
-    <meta data-rh="true" property="og:url" content="https://eclipse.invariant.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://eclipse.invariant.app/" />
     <meta
-      data-rh="true"
       property="og:title"
       content="Invariant - Unlock High Capital Efficiency with Concentrated Liquidity on Eclipse" />
-    <meta data-rh="true" property="og:image:width" content="1200" />
-    <meta data-rh="true" property="og:image:height" content="630" />
     <meta
       property="og:description"
       content="Join Invariant, the top AMM DEX on Eclipse, and access cutting-edge DeFi solutions with concentrated liquidity for maximum capital efficiency and risk management." />
-    <meta data-rh="true" property="og:image" content="https://eclipse.invariant.app/logo.png" />
+    <meta property="og:image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://twitter.com/invariant_labs" />
     <meta property="twitter:title" content="Invariant - AMM DEX provided concentrated liquidity" />
     <meta
