--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://invariant.app/" />
+    <meta property="og:url" content="https://eclipse.invariant.app/" />
     <meta
       property="og:title"
       content="Invariant - Unlock High Capital Efficiency with Concentrated Liquidity on Eclipse" />
     <meta
       property="og:description"
       content="Join Invariant, the top AMM DEX on Eclipse, and access cutting-edge DeFi solutions with concentrated liquidity for maximum capital efficiency and risk management." />
-    <meta property="og:image" content="https://invariant.app/logo.png" />
+    <meta property="og:image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -42,7 +42,7 @@
     <meta
       property="twitter:description"
       content="Discover Invariant, Eclipse's most efficient AMM DEX. Concentrated liquidity ensures top-tier capital efficiency for all DeFi traders." />
-    <meta property="twitter:image" content="https://invariant.app/logo.png" />
+    <meta property="twitter:image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- DublinCore -->
     <link rel="schema.dcterms" href="https://purl.org/dc/terms/" />
@@ -55,7 +55,7 @@
       lang="en"
       content="Invariant offers top-tier capital efficiency and risk management on Eclipse, making it the most advanced AMM DEX for DeFi investors." />
     <meta name="DC.publisher" content="Invariant" />
-    <meta name="DC.identifier" content="https://invariant.app/" />
+    <meta name="DC.identifier" content="https://eclipse.invariant.app/" />
     <meta name="DC.format" content="text/html" />
     <meta name="DC.type" content="Text" />
 
@@ -64,22 +64,23 @@
     <meta
       itemprop="description"
       content="Invariant offers top-tier capital efficiency and risk management on Eclipse, making it the most advanced AMM DEX for DeFi investors." />
-    <meta itemprop="image" content="https://invariant.app/logo.png" />
+    <meta itemprop="image" content="https://eclipse.invariant.app/logo.png" />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://invariant.app/" />
+    <link rel="canonical" href="https://eclipse.invariant.app/" />
 
     <!-- Manifest -->
     <link rel="manifest" href="/public/manifest.json" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
-      {
+      {    name: Chain.Eclipse,
+        address: 'https://eclipse.invariant.app/exchange',
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Invariant",
-        "url": "https://invariant.app/",
-        "logo": "https://invariant.app/favicon-192x192.png",
+        "url": "https://eclipse.invariant.app/",
+        "logo": "https://eclipse.invariant.app/favicon-192x192.png",
         "sameAs": [
           "https://twitter.com/invariant_labs",
           "https://medium.com/@invariantlabs",
